fix(images): keep correct aspect ratio on mobile
Otherwise images would be squeezed because mobile displays are to small.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,3 +28,8 @@
     --primary-color-alpha: rgba(98, 146, 146, 0.2);
     --primary-color: #629292;
 }
+
+/* Keep correct aspect ratio after adding image dimensions. Source: https://jampack.divriots.com/configuration/ */
+:where(img) {
+    height: auto
+}
